--- a/uni.scss
+++ b/uni.scss
@@ -11,6 +11,7 @@
  *
  * 如果你的项目同样使用了scss预处理，你也可以直接在你的 scss 代码中使用如下变量，同时无需 import 这个文件
  */
+
 /* 颜色变量 */
 
 /* 行为相关颜色 */
@@ -33,7 +34,7 @@ $uni-bg-color-hover:#f1f1f1;//点击状态颜色
 $uni-bg-color-mask:rgba(0, 0, 0, 0.4);//遮罩颜色
 
 /* 边框颜色 */
-$uni-border-color:#e5e5e5;
+$uni-border-color:#c8c7cc;
 
 /* 尺寸变量 */
 
